# wispr-local

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  run-dev.ps1
scripts/: generate_icon.py
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  formatting.rs  lib.rs  main.rs  settings.rs  state.rs
src-tauri/src/audio/: buffer.rs  capture.rs  devices.rs  mod.rs
src-tauri/src/system/: mod.rs  sounds.rs  text_injection.rs  tray.rs
src-tauri/src/transcription/: engine.rs  models.rs
src/styles/: global.css
