[package]
name = "wispr-local"
version = "0.1.0"
description = "Local, privacy-first voice-to-text dictation tool powered by Whisper.cpp"
authors = ["nsoth"]
license = "MIT"
repository = "https://github.com/nsoth/wispr-local"
edition = "2021"

[lib]
name = "wispr_local_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
whisper-rs = { version = "0.15", features = ["cuda"] }
cpal = "0.15"
enigo = "0.2"
arboard = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
hound = "3.5"
ringbuf = "0.4"
directories = "5"
reqwest = { version = "0.12", features = ["json"] }
rodio = "0.19"
log = "0.4"
env_logger = "0.11"

[features]
custom-protocol = ["tauri/custom-protocol"]
